add checkboxes and color for html forms and checkboxes

--- a/index.css
+++ b/index.css
@@ -14,3 +14,15 @@ td, th {
 tr:nth-child(even) {
   background-color: #6169d6;
 }
+ #h{
+    color:rgb(233, 8, 147);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: medium;
+    background-color: blanchedalmond;
+}
+#j{
+    color:rgb(233, 42, 8);
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: large;
+    background-color: rgb(157, 194, 224);
+}
